--- a/style.css
+++ b/style.css
@@ -1,27 +1,25 @@
 html {
-  height:100%;
+  height: 100%;
   background: linear-gradient(to bottom, #9eb2da, #fff);
 }
 
 h1 {
   text-align: center;
-  padding-left:100px;
-  color: rgba(45,45,45,0.98);
+  padding-left: 100px;
+  color: rgba(45, 45, 45, 0.98);
 }
 
 body {
   padding: 0;
   margin: 0;
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Roboto', Helvetica;
+  font-family: "SF Pro Text", "SF Pro Icons", "Roboto", Helvetica;
 }
 
-/* The navigation menu */
 .navbar {
   overflow: hidden;
-  background-color: rgba(45,45,45,0.98);
+  background-color: #333;
 }
 
-/* Navigation links */
 .navbar a {
   float: left;
   font-size: 16px;
@@ -31,14 +29,12 @@ body {
   text-decoration: none;
 }
 
-/* The subnavigation menu */
-.subnav {
+.dropdown {
   float: left;
   overflow: hidden;
 }
 
-/* Subnav button */
-.subnav .subnavbtn {
+.dropdown .dropbtn {
   font-size: 16px;
   border: none;
   outline: none;
@@ -49,44 +45,35 @@ body {
   margin: 0;
 }
 
-/* Add to navigation links on hover */
 .navbar a:hover,
-.subnav:hover .subnavbtn {
-  background-color: rgb(38, 40, 63);
+.dropdown:hover .dropbtn {
+  background-color: rgb(0, 25, 165);
 }
 
-/* Style the subnav content - positioned absolute */
-.subnav-content {
+.dropdown-content {
   display: none;
   position: absolute;
-  left: 0;
-  background-color:  rgb(38, 40, 63);
-  width: 100%;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  opacity:0.5;
 }
 
-/* Style the subnav links */
-.subnav-content a {
-  float: left;
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-}
-
-/* Add a background color on hover */
-.subnav-content a:hover {
-  background-color: rgb(224, 228, 255);
+.dropdown-content a {
+  float: none;
   color: black;
-}
-
-/* When you move the mouse over the subnav container, open the subnav content */
-.subnav:hover .subnav-content {
+  padding: 12px 16px;
+  text-decoration: none;
   display: block;
+  text-align: left;
 }
 
-.container {
-  text-align: center;
-  position:relative;
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 #bestOf {
@@ -95,4 +82,137 @@ body {
 
 #choose {
   display: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Create three unequal columns that floats next to each other */
+.column {
+  float: left;
+  padding: 10px;
+}
+
+.left,
+.right {
+  width: 25%;
+}
+
+.left {
+  padding-left: 10%;
+}
+
+.right {
+  padding-right: 10%;
+}
+
+.middle {
+  width: 50%;
+  text-align: center;
+}
+
+.bigNumber {
+  font-size: 100px;
+}
+
+@media only screen and (max-device-width: 480px) {
+  h1 {
+    text-align: center;
+    padding-left: 100px;
+    font-size:4em;
+  }
+
+  p {
+    font-size:1.5em;
+  }
+
+  body {
+    padding: 0;
+    margin: 0;
+  }
+
+  .navbar {
+    overflow: hidden;
+  }
+
+  .navbar a {
+    float: left;
+    font-size: 2em;
+    text-align: center;
+    padding: 14px 16px;
+  }
+
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+
+  .dropdown .dropbtn {
+    font-size: 2em;
+    border: none;
+    outline: none;
+    padding: 14px 16px;
+    margin: 0;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px;
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    float: none;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  #bestOf {
+    display: none;
+  }
+
+  #choose {
+    display: none;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  /* Create three unequal columns that floats next to each other */
+  .column {
+    float: left;
+    padding: 10px;
+  }
+
+  .left,
+  .right {
+    width: 25%;
+  }
+
+  .left {
+    padding-left: 10%;
+  }
+
+  .right {
+    padding-right: 10%;
+  }
+
+  .middle {
+    width: 50%;
+    text-align: center;
+  }
+
+  .bigNumber {
+    font-size: 100px;
+  }
 }
